--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url("images/m3.jpg");
+    background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url("m3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
